--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 
 [![Codecov test coverage](https://codecov.io/gh/petersonR/practicalPSI/graph/badge.svg)](https://app.codecov.io/gh/petersonR/practicalPSI)
+[![R-CMD-check](https://github.com/petersonR/selectInferToolkit/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/petersonR/selectInferToolkit/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 
